Fixed jumping scrollbar

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -5,6 +5,10 @@ html, body {
     margin: 5px 0;
 }
 
+html{
+  overflow-y: scroll;
+}
+
 table td{
   vertical-align:middle !important;
 }
